kanc/src/tests/sample_code/should_fail/single_file/type_check/illegal_callee/nullary_adt_instance.k
type U {
    .u: U,
}

let foo = U.u(U.u);
